--- a/config/doctrine/Fornaza.Domain.Entities.Checklist.dcm.yml
+++ b/config/doctrine/Fornaza.Domain.Entities.Checklist.dcm.yml
@@ -21,6 +21,13 @@ Fornaza\Domain\Entities\Checklist:
             unique: false
             nullable: false
             precision: 0
+        archived:
+            type: boolean
+            scale: 0
+            length: null
+            unique: false
+            nullable: false
+            precision: 0
     oneToMany:
         steps:
             targetEntity: Fornaza\Domain\Entities\Step
